--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,12 +3,12 @@
 <%= form_for :article, url: articles_path do |f|  %>
     <p>
       <%= f.label :title %><br>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, :required => true, :maxlength => 5 %>
      </p>
 
     <p>
       <%= f.label :text %><br>
-      <%= f.text_area :text %>
+      <%= f.text_area :text, :required => true, :maxlength => 40 %>
     </p>
 
     <p>
